--- a/pomogatorWeb/src/app/app.component.html
+++ b/pomogatorWeb/src/app/app.component.html
@@ -1,1 +1,3 @@
+<app-map appId="7FL7O7fEGIJ1XPtoy9Fk" appCode="7KnIQ-A-QX2FULgcERVvqA" lat="37.7397" lng="-121.4252" width="100%" height="835px"></app-map>
+
 <router-outlet></router-outlet>
