--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/menu/menu_routing.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/menu/menu_routing.xml
@@ -1,6 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".RoutingActivity">
-    <item android:id="@+id/action_settings" android:title="@string/menu_settings"
-        android:orderInCategory="100" android:showAsAction="never" />
+    <item
+        android:id="@+id/Logout"
+        android:onClick="Logout"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="@string/menu_settings_logout" />
 </menu>
