--- a/pomogatorSimple/map.css
+++ b/pomogatorSimple/map.css
@@ -1,10 +1,17 @@
 
 #map {
-    width: 95%;
-    height: 450px;
+    width: 100%;
+    height: 85vh;
     background: grey;
 }
-
+#page-header{
+    display: grid;
+}
+input{
+    justify-self: center;
+    align-self: center;
+    margin: 0 !important;
+}
 #panel {
     width: 100%;
     height: 400px;
