--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/layout/activity_main.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/layout/activity_main.xml
@@ -109,6 +109,7 @@
 
             <android.widget.Button
                 android:id="@+id/directionsbutton"
+                style="@android:style/Widget.Material.Button.Colored"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="getDirections"
