--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/layout/login.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/layout/login.xml
@@ -18,6 +18,7 @@
 
     <Button
         android:id="@+id/loginbutton"
+        style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="Login"
