--- a/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/xml/network_security_config.xml
+++ b/AndroidTuts/tutorial/SimpleRoutingSolution/app/src/main/res/xml/network_security_config.xml
@@ -2,5 +2,6 @@
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
         <domain includeSubdomains="true">10.30.21.152</domain>
+        <domain includeSubdomains="true">10.30.21.40</domain>
     </domain-config>
 </network-security-config>
